--- a/listing.html
+++ b/listing.html
@@ -169,31 +169,31 @@
                     <div class="accordion-body">
                       <!-- option -->
                       <div class="option">
-                        <label for="locationOption0">  All </label>
+                        <label for="locationOption0"> All </label>
                         <input type="radio" checked name="categories" value="" id="locationOption0" />
                       </div>
                       <!-- option -->
                       <div class="option">
-                        <label for="locationOption1">  New York </label>
+                        <label for="locationOption1"> New York </label>
                         <input type="radio" name="categories" value="" id="locationOption1" />
                       </div>
                       <!-- option -->
                       <div class="option">
-                        <label for="locationOption2">  London </label>
-                        <input type="radio" name="categories" value="" id="locationOption2" />  
+                        <label for="locationOption2"> London </label>
+                        <input type="radio" name="categories" value="" id="locationOption2" />
                       </div>
                       <!-- option -->
                       <div class="option">
-                        <label for="locationOption3">  Paris </label>
-                        <input type="radio" name="categories" value="" id="locationOption3" />  
+                        <label for="locationOption3"> Paris </label>
+                        <input type="radio" name="categories" value="" id="locationOption3" />
                       </div>
                       <!-- option -->
                       <div class="option">
-                        <label for="locationOption4">  Shanghai </label>
+                        <label for="locationOption4"> Shanghai </label>
                         <input type="radio" name="categories" value="" id="locationOption4" />
                       </div>
-                  
-                      
+
+
                     </div>
                   </div>
                 </div>
@@ -228,11 +228,264 @@
               </div>
             </aside>
           </div>
-          <div class="col-lg-9 col-md-8 p-2">
+          <div class="col-lg-9 col-md-8 p-0">
             <h5 class="sortBy" id="openfilter">
               <img src="img/icons/sort.svg" alt="">
               Sort By
             </h5>
+
+            <div class="row">
+              <div class="col-sm-6 col-xl-4 p-2">
+                <!-- item -->
+                <div class="item" data-aos="fade-up">
+                  <button class="favorite active"> <img src="img/icons/heart.svg" alt=""> </button>
+                  <a href="itemDetails.html" class="itemImg">
+                    <img src="img/listing/item (1).jpg" loading="lazy" alt="">
+                  </a>
+                  <div class="itemInfo">
+                    <a href="#!" class="advertiser"> <img src="img/users/user (1).png" loading="lazy" alt=""> </a>
+                    <div class="time"> <img src="img/icons/clock.svg" alt=""> 1h ago </div>
+                    <a href="itemDetails.html" class="title"> Apple MacBook Air (2023) Apple M2 Chip </a>
+                    <p class="description"> The Apple MacBook Air 13.6-Inch laptop is powered by the new M2 chip. It is
+                      loaded with 8GB RAM and 256GB SSD.
+                    </p>
+                    <div class="location"> <img src="img/icons/location.svg" alt=""> <span> USA, California </span>
+                    </div>
+                    <div class="itemBottom">
+                      <a href="#!" class="category"> <span class="img"> <img src="img/categories/icon (1).svg" alt="">
+                        </span>
+                        Electronics </a>
+                      <div class="price"> <span> $ 1,200 </span> </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-6 col-xl-4 p-2">
+                <!-- item -->
+                <div class="item" data-aos="fade-up">
+                  <button class="favorite"> <img src="img/icons/heart.svg" alt=""> </button>
+                  <a href="itemDetails.html" class="itemImg">
+                    <img src="img/listing/item (2).jpg" loading="lazy" alt="">
+                  </a>
+                  <div class="itemInfo">
+                    <a href="#!" class="advertiser"> <img src="img/users/user (2).png" loading="lazy" alt=""> </a>
+                    <div class="time"> <img src="img/icons/clock.svg" alt=""> 1h ago </div>
+                    <a href="itemDetails.html" class="title"> Apple MacBook Air (2023) Apple M2 Chip </a>
+                    <p class="description"> The Apple MacBook Air 13.6-Inch laptop is powered by the new M2 chip. It is
+                      loaded with 8GB RAM and 256GB SSD.
+                    </p>
+                    <div class="location"> <img src="img/icons/location.svg" alt=""> <span> USA, California </span>
+                    </div>
+                    <div class="itemBottom">
+                      <a href="#!" class="category"> <span class="img"> <img src="img/categories/icon (1).svg" alt="">
+                        </span>
+                        Electronics </a>
+                      <div class="price"> <span> $ 1,200 </span> </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-6 col-xl-4 p-2">
+                <!-- item -->
+                <div class="item" data-aos="fade-up">
+                  <button class="favorite"> <img src="img/icons/heart.svg" alt=""> </button>
+                  <a href="itemDetails.html" class="itemImg">
+                    <img src="img/listing/item (3).jpg" loading="lazy" alt="">
+                  </a>
+                  <div class="itemInfo">
+                    <a href="#!" class="advertiser"> <img src="img/users/user (3).png" loading="lazy" alt=""> </a>
+                    <div class="time"> <img src="img/icons/clock.svg" alt=""> 1h ago </div>
+                    <a href="itemDetails.html" class="title"> Apple MacBook Air (2023) Apple M2 Chip </a>
+                    <p class="description"> The Apple MacBook Air 13.6-Inch laptop is powered by the new M2 chip. It is
+                      loaded with 8GB RAM and 256GB SSD.
+                    </p>
+                    <div class="location"> <img src="img/icons/location.svg" alt=""> <span> USA, California </span>
+                    </div>
+                    <div class="itemBottom">
+                      <a href="#!" class="category"> <span class="img"> <img src="img/categories/icon (1).svg" alt="">
+                        </span>
+                        Electronics </a>
+                      <div class="price"> <span> $ 1,200 </span> </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-6 col-xl-4 p-2">
+                <!-- item -->
+                <div class="item" data-aos="fade-up">
+                  <button class="favorite"> <img src="img/icons/heart.svg" alt=""> </button>
+                  <a href="itemDetails.html" class="itemImg">
+                    <img src="img/listing/item (4).jpg" loading="lazy" alt="">
+                  </a>
+                  <div class="itemInfo">
+                    <a href="#!" class="advertiser"> <img src="img/users/user (4).png" loading="lazy" alt=""> </a>
+                    <div class="time"> <img src="img/icons/clock.svg" alt=""> 1h ago </div>
+                    <a href="itemDetails.html" class="title"> Apple MacBook Air (2023) Apple M2 Chip </a>
+                    <p class="description"> The Apple MacBook Air 13.6-Inch laptop is powered by the new M2 chip. It is
+                      loaded with 8GB RAM and 256GB SSD.
+                    </p>
+                    <div class="location"> <img src="img/icons/location.svg" alt=""> <span> USA, California </span>
+                    </div>
+                    <div class="itemBottom">
+                      <a href="#!" class="category"> <span class="img"> <img src="img/categories/icon (1).svg" alt="">
+                        </span>
+                        Electronics </a>
+                      <div class="price"> <span> $ 1,200 </span> </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-6 col-xl-4 p-2">
+                <!-- item -->
+                <div class="item" data-aos="fade-up">
+                  <button class="favorite"> <img src="img/icons/heart.svg" alt=""> </button>
+                  <a href="itemDetails.html" class="itemImg">
+                    <img src="img/listing/item (5).jpg" loading="lazy" alt="">
+                  </a>
+                  <div class="itemInfo">
+                    <a href="#!" class="advertiser"> <img src="img/users/user (5).png" loading="lazy" alt=""> </a>
+                    <div class="time"> <img src="img/icons/clock.svg" alt=""> 1h ago </div>
+                    <a href="itemDetails.html" class="title"> Apple MacBook Air (2023) Apple M2 Chip </a>
+                    <p class="description"> The Apple MacBook Air 13.6-Inch laptop is powered by the new M2 chip. It is
+                      loaded with 8GB RAM and 256GB SSD.
+                    </p>
+                    <div class="location"> <img src="img/icons/location.svg" alt=""> <span> USA, California </span>
+                    </div>
+                    <div class="itemBottom">
+                      <a href="#!" class="category"> <span class="img"> <img src="img/categories/icon (1).svg" alt="">
+                        </span>
+                        Electronics </a>
+                      <div class="price"> <span> $ 1,200 </span> </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-6 col-xl-4 p-2">
+                <!-- item -->
+                <div class="item" data-aos="fade-up">
+                  <button class="favorite active"> <img src="img/icons/heart.svg" alt=""> </button>
+                  <a href="itemDetails.html" class="itemImg">
+                    <img src="img/listing/item (6).jpg" loading="lazy" alt="">
+                  </a>
+                  <div class="itemInfo">
+                    <a href="#!" class="advertiser"> <img src="img/users/user (6).png" loading="lazy" alt=""> </a>
+                    <div class="time"> <img src="img/icons/clock.svg" alt=""> 1h ago </div>
+                    <a href="itemDetails.html" class="title"> Apple MacBook Air (2023) Apple M2 Chip </a>
+                    <p class="description"> The Apple MacBook Air 13.6-Inch laptop is powered by the new M2 chip. It is
+                      loaded with 8GB RAM and 256GB SSD.
+                    </p>
+                    <div class="location"> <img src="img/icons/location.svg" alt=""> <span> USA, California </span>
+                    </div>
+                    <div class="itemBottom">
+                      <a href="#!" class="category"> <span class="img"> <img src="img/categories/icon (1).svg" alt="">
+                        </span>
+                        Electronics </a>
+                      <div class="price"> <span> $ 1,200 </span> </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-6 col-xl-4 p-2">
+                <!-- item -->
+                <div class="item" data-aos="fade-up">
+                  <button class="favorite"> <img src="img/icons/heart.svg" alt=""> </button>
+                  <a href="itemDetails.html" class="itemImg">
+                    <img src="img/listing/item (7).jpg" loading="lazy" alt="">
+                  </a>
+                  <div class="itemInfo">
+                    <a href="#!" class="advertiser"> <img src="img/users/user (7).png" loading="lazy" alt=""> </a>
+                    <div class="time"> <img src="img/icons/clock.svg" alt=""> 1h ago </div>
+                    <a href="itemDetails.html" class="title"> Apple MacBook Air (2023) Apple M2 Chip </a>
+                    <p class="description"> The Apple MacBook Air 13.6-Inch laptop is powered by the new M2 chip. It is
+                      loaded with 8GB RAM and 256GB SSD.
+                    </p>
+                    <div class="location"> <img src="img/icons/location.svg" alt=""> <span> USA, California </span>
+                    </div>
+                    <div class="itemBottom">
+                      <a href="#!" class="category"> <span class="img"> <img src="img/categories/icon (1).svg" alt="">
+                        </span>
+                        Electronics </a>
+                      <div class="price"> <span> $ 1,200 </span> </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-6 col-xl-4 p-2">
+                <!-- item -->
+                <div class="item" data-aos="fade-up">
+                  <button class="favorite"> <img src="img/icons/heart.svg" alt=""> </button>
+                  <a href="itemDetails.html" class="itemImg">
+                    <img src="img/listing/item (8).jpg" loading="lazy" alt="">
+                  </a>
+                  <div class="itemInfo">
+                    <a href="#!" class="advertiser"> <img src="img/users/user (8).png" loading="lazy" alt=""> </a>
+                    <div class="time"> <img src="img/icons/clock.svg" alt=""> 1h ago </div>
+                    <a href="itemDetails.html" class="title"> Apple MacBook Air (2023) Apple M2 Chip </a>
+                    <p class="description"> The Apple MacBook Air 13.6-Inch laptop is powered by the new M2 chip. It is
+                      loaded with 8GB RAM and 256GB SSD.
+                    </p>
+                    <div class="location"> <img src="img/icons/location.svg" alt=""> <span> USA, California </span>
+                    </div>
+                    <div class="itemBottom">
+                      <a href="#!" class="category"> <span class="img"> <img src="img/categories/icon (1).svg" alt="">
+                        </span>
+                        Electronics </a>
+                      <div class="price"> <span> $ 1,200 </span> </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-6 col-xl-4 p-2">
+                <!-- item -->
+                <div class="item" data-aos="fade-up">
+                  <button class="favorite"> <img src="img/icons/heart.svg" alt=""> </button>
+                  <a href="itemDetails.html" class="itemImg">
+                    <img src="img/listing/item (9).jpg" loading="lazy" alt="">
+                  </a>
+                  <div class="itemInfo">
+                    <a href="#!" class="advertiser"> <img src="img/users/user (9).png" loading="lazy" alt=""> </a>
+                    <div class="time"> <img src="img/icons/clock.svg" alt=""> 1h ago </div>
+                    <a href="itemDetails.html" class="title"> Apple MacBook Air (2023) Apple M2 Chip </a>
+                    <p class="description"> The Apple MacBook Air 13.6-Inch laptop is powered by the new M2 chip. It is
+                      loaded with 8GB RAM and 256GB SSD.
+                    </p>
+                    <div class="location"> <img src="img/icons/location.svg" alt=""> <span> USA, California </span>
+                    </div>
+                    <div class="itemBottom">
+                      <a href="#!" class="category"> <span class="img"> <img src="img/categories/icon (1).svg" alt="">
+                        </span>
+                        Electronics </a>
+                      <div class="price"> <span> $ 1,200 </span> </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- pagination -->
+            <nav aria-label="Page navigation" data-aos="fade-up"> 
+              <ul class="pagination    ">
+                <li class="page-item disabled">
+                  <a class="page-link" href="#!" aria-label="Previous">
+                    <span aria-hidden="true"> &laquo; </span>
+                  </a>
+                </li>
+                <li class="page-item active" aria-current="page">
+                  <a class="page-link" href="#!">1</a>
+                </li>
+                <li class="page-item"><a class="page-link" href="#!">2</a></li>
+                <li class="page-item">
+                  <a class="page-link" href="#!">3</a>
+                </li>
+                <li class="page-item">
+                  <a class="page-link" href="#!" aria-label="Next">
+                    <span aria-hidden="true"> &raquo; </span>
+                  </a>
+                </li>
+              </ul>
+            </nav>
+
+
           </div>
         </div>
       </div>
