--- a/categories.html
+++ b/categories.html
@@ -92,7 +92,7 @@
         <div class="row pt-3">
           <div class="col-6 col-md-4 col-xl-3 p-2 p-xl-3">
             <!-- category -->
-            <a href="#!" class="category">
+            <a href="listing.html" class="category">
               <div class="text">
                 <h5 class="title"> Mobile & Tablets </h5>
                 <span>15,000 ads</span>
@@ -104,7 +104,7 @@
           </div>
           <div class="col-6 col-md-4 col-xl-3 p-2 p-xl-3">
             <!-- category -->
-            <a href="#!" class="category">
+            <a href="listing.html" class="category">
               <div class="text">
                 <h5 class="title"> Vehicles </h5>
                 <span>15,000 ads</span>
@@ -116,7 +116,7 @@
           </div>
           <div class="col-6 col-md-4 col-xl-3 p-2 p-xl-3">
             <!-- category -->
-            <a href="#!" class="category">
+            <a href="listing.html" class="category">
               <div class="text">
                 <h5 class="title"> Properties </h5>
                 <span>15,000 ads</span>
@@ -128,7 +128,7 @@
           </div>
           <div class="col-6 col-md-4 col-xl-3 p-2 p-xl-3">
             <!-- category -->
-            <a href="#!" class="category">
+            <a href="listing.html" class="category">
               <div class="text">
                 <h5 class="title"> Jobs </h5>
                 <span>15,000 ads</span>
@@ -140,7 +140,7 @@
           </div>
           <div class="col-6 col-md-4 col-xl-3 p-2 p-xl-3">
             <!-- category -->
-            <a href="#!" class="category">
+            <a href="listing.html" class="category">
               <div class="text">
                 <h5 class="title"> Kids & Babies </h5>
                 <span>15,000 ads</span>
@@ -152,7 +152,7 @@
           </div>
           <div class="col-6 col-md-4 col-xl-3 p-2 p-xl-3">
             <!-- category -->
-            <a href="#!" class="category">
+            <a href="listing.html" class="category">
               <div class="text">
                 <h5 class="title"> Hoppies </h5>
                 <span>15,000 ads</span>
@@ -164,7 +164,7 @@
           </div>
           <div class="col-6 col-md-4 col-xl-3 p-2 p-xl-3">
             <!-- category -->
-            <a href="#!" class="category">
+            <a href="listing.html" class="category">
               <div class="text">
                 <h5 class="title"> Pets </h5>
                 <span>15,000 ads</span>
@@ -176,7 +176,7 @@
           </div>
           <div class="col-6 col-md-4 col-xl-3 p-2 p-xl-3">
             <!-- category -->
-            <a href="#!" class="category">
+            <a href="listing.html" class="category">
               <div class="text">
                 <h5 class="title"> Furniture & Decor </h5>
                 <span>15,000 ads</span>
@@ -188,7 +188,7 @@
           </div>
           <div class="col-6 col-md-4 col-xl-3 p-2 p-xl-3">
             <!-- category -->
-            <a href="#!" class="category">
+            <a href="listing.html" class="category">
               <div class="text">
                 <h5 class="title"> Fashion & Beauty </h5>
                 <span>15,000 ads</span>
@@ -200,7 +200,7 @@
           </div>
           <div class="col-6 col-md-4 col-xl-3 p-2 p-xl-3">
             <!-- category -->
-            <a href="#!" class="category">
+            <a href="listing.html" class="category">
               <div class="text">
                 <h5 class="title"> Electronics & Appliances </h5>
                 <span>15,000 ads</span>
@@ -212,7 +212,7 @@
           </div>
           <div class="col-6 col-md-4 col-xl-3 p-2 p-xl-3">
             <!-- category -->
-            <a href="#!" class="category">
+            <a href="listing.html" class="category">
               <div class="text">
                 <h5 class="title"> Businesses & Industrial </h5>
                 <span>15,000 ads</span>
@@ -224,7 +224,7 @@
           </div>
           <div class="col-6 col-md-4 col-xl-3 p-2 p-xl-3">
             <!-- category -->
-            <a href="#!" class="category">
+            <a href="listing.html" class="category">
               <div class="text">
                 <h5 class="title"> Services </h5>
                 <span>15,000 ads</span>
