--- a/itemDetails.html
+++ b/itemDetails.html
@@ -180,7 +180,7 @@
               <div class="price"> <span> $1,200 </span> </div>
               <button class="favorite "> <img src="img/icons/heart.svg" alt=""> </button>
               <div class="actions">
-                <a href="#!" class="category">
+                <a href="listing.html" class="category">
                   <img src="img/categories/icon (1).svg" alt="">
                   Electronics
                 </a>
