--- a/listing.html
+++ b/listing.html
@@ -252,7 +252,7 @@
                     <div class="location"> <img src="img/icons/location.svg" alt=""> <span> USA, California </span>
                     </div>
                     <div class="itemBottom">
-                      <a href="#!" class="category"> <span class="img"> <img src="img/categories/icon (1).svg" alt="">
+                      <a href="listing.html" class="category"> <span class="img"> <img src="img/categories/icon (1).svg" alt="">
                         </span>
                         Electronics </a>
                       <div class="price"> <span> $ 1,200 </span> </div>
@@ -277,7 +277,7 @@
                     <div class="location"> <img src="img/icons/location.svg" alt=""> <span> USA, California </span>
                     </div>
                     <div class="itemBottom">
-                      <a href="#!" class="category"> <span class="img"> <img src="img/categories/icon (1).svg" alt="">
+                      <a href="listing.html" class="category"> <span class="img"> <img src="img/categories/icon (1).svg" alt="">
                         </span>
                         Electronics </a>
                       <div class="price"> <span> $ 1,200 </span> </div>
@@ -302,7 +302,7 @@
                     <div class="location"> <img src="img/icons/location.svg" alt=""> <span> USA, California </span>
                     </div>
                     <div class="itemBottom">
-                      <a href="#!" class="category"> <span class="img"> <img src="img/categories/icon (1).svg" alt="">
+                      <a href="listing.html" class="category"> <span class="img"> <img src="img/categories/icon (1).svg" alt="">
                         </span>
                         Electronics </a>
                       <div class="price"> <span> $ 1,200 </span> </div>
@@ -327,7 +327,7 @@
                     <div class="location"> <img src="img/icons/location.svg" alt=""> <span> USA, California </span>
                     </div>
                     <div class="itemBottom">
-                      <a href="#!" class="category"> <span class="img"> <img src="img/categories/icon (1).svg" alt="">
+                      <a href="listing.html" class="category"> <span class="img"> <img src="img/categories/icon (1).svg" alt="">
                         </span>
                         Electronics </a>
                       <div class="price"> <span> $ 1,200 </span> </div>
@@ -352,7 +352,7 @@
                     <div class="location"> <img src="img/icons/location.svg" alt=""> <span> USA, California </span>
                     </div>
                     <div class="itemBottom">
-                      <a href="#!" class="category"> <span class="img"> <img src="img/categories/icon (1).svg" alt="">
+                      <a href="listing.html" class="category"> <span class="img"> <img src="img/categories/icon (1).svg" alt="">
                         </span>
                         Electronics </a>
                       <div class="price"> <span> $ 1,200 </span> </div>
@@ -377,7 +377,7 @@
                     <div class="location"> <img src="img/icons/location.svg" alt=""> <span> USA, California </span>
                     </div>
                     <div class="itemBottom">
-                      <a href="#!" class="category"> <span class="img"> <img src="img/categories/icon (1).svg" alt="">
+                      <a href="listing.html" class="category"> <span class="img"> <img src="img/categories/icon (1).svg" alt="">
                         </span>
                         Electronics </a>
                       <div class="price"> <span> $ 1,200 </span> </div>
@@ -402,7 +402,7 @@
                     <div class="location"> <img src="img/icons/location.svg" alt=""> <span> USA, California </span>
                     </div>
                     <div class="itemBottom">
-                      <a href="#!" class="category"> <span class="img"> <img src="img/categories/icon (1).svg" alt="">
+                      <a href="listing.html" class="category"> <span class="img"> <img src="img/categories/icon (1).svg" alt="">
                         </span>
                         Electronics </a>
                       <div class="price"> <span> $ 1,200 </span> </div>
@@ -427,7 +427,7 @@
                     <div class="location"> <img src="img/icons/location.svg" alt=""> <span> USA, California </span>
                     </div>
                     <div class="itemBottom">
-                      <a href="#!" class="category"> <span class="img"> <img src="img/categories/icon (1).svg" alt="">
+                      <a href="listing.html" class="category"> <span class="img"> <img src="img/categories/icon (1).svg" alt="">
                         </span>
                         Electronics </a>
                       <div class="price"> <span> $ 1,200 </span> </div>
@@ -452,7 +452,7 @@
                     <div class="location"> <img src="img/icons/location.svg" alt=""> <span> USA, California </span>
                     </div>
                     <div class="itemBottom">
-                      <a href="#!" class="category"> <span class="img"> <img src="img/categories/icon (1).svg" alt="">
+                      <a href="listing.html" class="category"> <span class="img"> <img src="img/categories/icon (1).svg" alt="">
                         </span>
                         Electronics </a>
                       <div class="price"> <span> $ 1,200 </span> </div>
@@ -576,17 +576,6 @@
   <!-- main -->
   <script src="js/main.js"></script>
   <script src="js/custom.js"></script>
-  <script>
-    let openFilter = document.getElementById("openfilter");
-    let closeFilter = document.getElementById("closefilter");
-    let filter = document.getElementById("filter");
-    openfilter.addEventListener("click", () => {
-      filter.classList.add("active");
-    });
-    closefilter.addEventListener("click", () => {
-      filter.classList.remove("active");
-    });
-  </script>
 </body>
 
 </html>
