--- a/itemDetails.html
+++ b/itemDetails.html
@@ -90,7 +90,7 @@
     <section class="itemDetails">
       <div class="container">
         <div class="row">
-          <div class="col-lg-8 d-flex flex-column gap-4 p-0 pb-3 p-md-3">
+          <div class="col-lg-9 d-flex flex-column gap-4 p-0 pb-3 p-md-3">
             <!-- itemDetailsSlider -->
             <div class="itemDetailsSlider">
               <!-- projectDetails Slider -->
@@ -279,10 +279,10 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4 p-0 p-md-3">
+          <div class="col-lg-3 p-0 p-md-3">
             <!-- advertiserDetails -->
             <div class="advertiserDetails">
-              <a href="#!" class="advertiser">
+              <a href="advertiser.html" class="advertiser">
                 <img src="img/users/user (1).png" loading="lazy" alt="">
                 <h3 class="name"> mahmoud elkomy </h3>
               </a>
