--- a/advertiser.html
+++ b/advertiser.html
@@ -91,7 +91,7 @@
         <div class="row">
           <div class="col-xl-3 p-0 p-md-3">
             <!-- advertiserDetails -->
-            <div class="advertiserDetails">
+            <div class="advertiserDetails"  data-aos="fade-up">
               <a href="advertiser.html" class="advertiser">
                 <img src="img/users/user (1).png" loading="lazy" alt="">
                 <h3 class="name"> mahmoud elkomy </h3>
@@ -99,20 +99,23 @@
               <span class="date"> Member S. Nov 24, 2020 </span>
               <div class="location"> <img src="img/icons/location.svg" alt=""> <span> USA, California </span> </div>
               <div class="contact">
-                <a href="#!" class="chat">
+                <!-- <a href="#!" class="chat">
                   <img src="img/icons/chat.svg" alt="">
                   <span> chat </span>
-                </a>
+                </a> -->
                 <a href="#!" class="call">
                   <img src="img/icons/call.svg" alt="">
                   <span> call </span>
                 </a>
               </div>
             </div>
-          
           </div>
-
           <div class="col-xl-9 p-0">
+            <!-- search form -->
+            <form class="searchForm d-flex w-100 mt-4 mb-2 " data-aos="fade-up">
+              <input type="search" class="form-control" placeholder="Search ">
+              <button class="btn"> <img src="img/icons/search.svg" alt=""> </button>
+            </form>
             <div class="row">
               <div class="col-sm-6 col-lg-4 p-2">
                 <!-- item -->
@@ -381,7 +384,6 @@
               </ul>
             </nav>
           </div>
-
         </div>
       </div>
     </section>
@@ -406,7 +408,7 @@
         </div>
       </div>
       <div class="d-flex gap-4 flex-wrap justify-content-between pt-4 px-3 border-top align-items-center">
-        <a href="https://maps.app.goo.gl/FU3gh5HK1XywJwe97" class="link" target="_blank">
+        <a href="https://maps.app.goo.gl/9Mg14qzeZY9tq7oeA" class="link" target="_blank">
           <div class="icon">
             <svg xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg" id="Layer_1"
               data-name="Layer 1" viewBox="0 0 24 24" width="24" height="24">
