--- a/index.html
+++ b/index.html
@@ -1840,7 +1840,7 @@
         </div>
       </div>
       <div class="d-flex gap-4 flex-wrap justify-content-between pt-4 px-3 border-top align-items-center">
-        <a href="https://maps.app.goo.gl/FU3gh5HK1XywJwe97" class="link" target="_blank">
+        <a href="https://maps.app.goo.gl/9Mg14qzeZY9tq7oeA" class="link" target="_blank">
           <div class="icon">
             <svg xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg" id="Layer_1"
               data-name="Layer 1" viewBox="0 0 24 24" width="24" height="24">
