--- a/itemDetails.html
+++ b/itemDetails.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <!-- Required meta tags -->
   <meta charset="UTF-8" />
@@ -19,7 +18,6 @@
   <!-- Custom style  -->
   <link rel="stylesheet" href="css/style.css" />
 </head>
-
 <body>
   <!-- ================ Header ================= -->
   <header>
@@ -90,9 +88,9 @@
     <section class="itemDetails">
       <div class="container">
         <div class="row">
-          <div class="col-lg-9 d-flex flex-column gap-4 p-0 pb-3 p-md-3">
+          <div class="col-lg-8 d-flex flex-column gap-4 p-0 pb-3 p-md-3">
             <!-- itemDetailsSlider -->
-            <div class="itemDetailsSlider">
+            <div class="itemDetailsSlider"  data-aos="fade-up">
               <!-- projectDetails Slider -->
               <div class="swiper slider">
                 <div class="swiper-wrapper">
@@ -176,7 +174,7 @@
               </div>
             </div>
             <!-- priceInfo -->
-            <div class="priceInfo">
+            <div class="priceInfo"  data-aos="fade-up">
               <div class="price"> <span> $1,200 </span> </div>
               <button class="favorite "> <img src="img/icons/heart.svg" alt=""> </button>
               <div class="actions">
@@ -202,7 +200,7 @@
               </div>
             </div>
             <!-- itemInfo -->
-            <div class="itemInfo">
+            <div class="itemInfo"  data-aos="fade-up">
               <h3 class="title"> Apple MacBook Air (2023) Apple M2 Chip </h3>
               <!-- itemBottom -->
               <div class="itemBottom">
@@ -226,9 +224,8 @@
                 <span> Firm price </span>
               </div>
             </div>
-
             <!-- itemDetailsBox -->
-            <div class="itemDetailsBox">
+            <div class="itemDetailsBox"  data-aos="fade-up">
               <h4 class="title">Key Features</h4>
               <ul>
                 <li>
@@ -266,22 +263,20 @@
               </ul>
             </div>
             <!-- itemDetailsBox -->
-            <div class="itemDetailsBox">
+            <div class="itemDetailsBox"  data-aos="fade-up">
               <h4 class="title">Extra Features</h4>
               <div class="features">
-
                 <span> Airbag </span>
                 <span> ABS </span>
                 <span> Air Condioning </span>
                 <span> AM/FM Radio </span>
                 <span> EBD </span>
-
               </div>
             </div>
           </div>
-          <div class="col-lg-3 p-0 p-md-3">
+          <div class="col-lg-4 p-0 p-md-3">
             <!-- advertiserDetails -->
-            <div class="advertiserDetails">
+            <div class="advertiserDetails"  data-aos="fade-up">
               <a href="advertiser.html" class="advertiser">
                 <img src="img/users/user (1).png" loading="lazy" alt="">
                 <h3 class="name"> mahmoud elkomy </h3>
@@ -297,11 +292,9 @@
                   <span> call </span>
                 </a>
               </div>
-
             </div>
-
             <!-- itemDetailsBox -->
-            <div class="itemDetailsBox">
+            <div class="itemDetailsBox"  data-aos="fade-up">
               <h4 class="title"> Your safety matters to us </h4>
               <ul>
                 <li>
@@ -316,10 +309,8 @@
                 <li>
                   <p> Do not pay or transfer money unless you have inspected the product properly </p>
                 </li>
-
               </ul>
             </div>
-
           </div>
         </div>
       </div>
@@ -345,7 +336,7 @@
         </div>
       </div>
       <div class="d-flex gap-4 flex-wrap justify-content-between pt-4 px-3 border-top align-items-center">
-        <a href="https://maps.app.goo.gl/FU3gh5HK1XywJwe97" class="link" target="_blank">
+        <a href="https://maps.app.goo.gl/9Mg14qzeZY9tq7oeA" class="link" target="_blank">
           <div class="icon">
             <svg xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg" id="Layer_1"
               data-name="Layer 1" viewBox="0 0 24 24" width="24" height="24">
@@ -411,5 +402,4 @@
   <script src="js/main.js"></script>
   <script src="js/custom.js"></script>
 </body>
-
 </html>
