--- a/profile.html
+++ b/profile.html
@@ -80,38 +80,50 @@
       <div class="container">
         <div class="links">
           <a href="index.html"> Home </a>
-          <a href="#!" class="active"> register </a>
+          <a href="#!" class="active"> profile </a>
         </div>
-        <!-- <h2> register </h2> -->
+        <!-- <h2> profile </h2> -->
       </div>
     </section>
-    <!-- account Form -->
-    <section class="accountForm">
-      <div class="container">
+
+
+    <!-- profile -->
+    <section class="profile">
+      <div class="container ">
+        <!-- /user Header  -->
         <div class="row">
-          <div class="col-md-8 col-lg-6 col-xl-5 m-auto p-2">
-            <form action="profile.html" class="cardForm" data-aos="fade-up">
-              <div class="profileImage">
-                <input type="file" id="profileImageInput" accept="image/*" />
-                <label for="profileImageInput" class="profileImageLabel">
-                  <img src="img/placeholder.svg" alt="Profile Image" id="profileImagePreview" />
-                </label>
-                <span><img src="img/icons/plus.svg" alt=""></span>
+          <!-- links -->
+          <div class="col-md-5 col-lg-4 col-xl-3 p-1">
+            <!-- user Header  -->
+            <div class=" userHeader">
+              <div class="userInfo">
+                <img class="userImg" src="img/placeholder.svg" alt="">
+                <div class="userName">
+                  <h4 class="name"> Mahmoud Elkomy </h4>
+                  <span class="phone"> +1 0123456789 </span>
+                </div>
+                <div class="control">
+                  <a href="login.html" data-bs-toggle="tooltip" title=" logout"><img src="img/icons/powerOff.svg"
+                      alt=""></a>
+                </div>
               </div>
-              <div class="formGroup">
-                <input type="text" class="form-control" name="" id="name" placeholder="User Name">
-              </div>
-              <div class="formGroup">
-                <input type="text" class="form-control" name="" id="location" placeholder="Location"
-                  oninput="geocodeAddress()">
-              </div>
-              <div id="mapView"></div>
-              <button type="submit" class="customBtn mt-4">Confirm</button>
-            </form>
+            </div>
+            <div class="profileNavCol">
+              <a class="active" href="profile.html"> profile </a>
+              <a href="notifications.html"> notifications </a>
+              <a href="editProfile.html"> edit Profile </a>
+              <a href="login.html"> logout </a>
+            </div>
+          </div>
+          <!-- content -->
+          <div class=" col-md-7 col-lg-8 col-xl-9 p-2 profileContent">
+
+
           </div>
         </div>
       </div>
     </section>
+
   </content>
   <!--(((((((((((((((((((((((()))))))))))))))))))))))-->
   <!--((((((((((((((((( / content )))))))))))))))))))-->
@@ -198,229 +210,6 @@
   <!-- main -->
   <script src="js/main.js"></script>
   <script src="js/custom.js"></script>
-  <script>
-    let map;
-    let marker;
-    let geocoder;
-    function initMap() {
-      map = new google.maps.Map(document.getElementById('mapView'), {
-        zoom: 14,
-        mapTypeControl: false,
-        streetViewControl: false,
-        // styles: [
-        //   {
-        //     "elementType": "geometry",
-        //     "stylers": [
-        //       {
-        //         "color": "#f5f5f5"
-        //       }
-        //     ]
-        //   },
-        //   {
-        //     "elementType": "labels.icon",
-        //     "stylers": [
-        //       {
-        //         "visibility": "off"
-        //       }
-        //     ]
-        //   },
-        //   {
-        //     "elementType": "labels.text.fill",
-        //     "stylers": [
-        //       {
-        //         "color": "#616161"
-        //       }
-        //     ]
-        //   },
-        //   {
-        //     "elementType": "labels.text.stroke",
-        //     "stylers": [
-        //       {
-        //         "color": "#f5f5f5"
-        //       }
-        //     ]
-        //   },
-        //   {
-        //     "featureType": "administrative.land_parcel",
-        //     "elementType": "labels.text.fill",
-        //     "stylers": [
-        //       {
-        //         "color": "#bdbdbd"
-        //       }
-        //     ]
-        //   },
-        //   {
-        //     "featureType": "poi",
-        //     "elementType": "geometry",
-        //     "stylers": [
-        //       {
-        //         "color": "#eeeeee"
-        //       }
-        //     ]
-        //   },
-        //   {
-        //     "featureType": "poi",
-        //     "elementType": "labels.text.fill",
-        //     "stylers": [
-        //       {
-        //         "color": "#757575"
-        //       }
-        //     ]
-        //   },
-        //   {
-        //     "featureType": "poi.park",
-        //     "elementType": "geometry",
-        //     "stylers": [
-        //       {
-        //         "color": "#e5e5e5"
-        //       }
-        //     ]
-        //   },
-        //   {
-        //     "featureType": "poi.park",
-        //     "elementType": "labels.text.fill",
-        //     "stylers": [
-        //       {
-        //         "color": "#9e9e9e"
-        //       }
-        //     ]
-        //   },
-        //   {
-        //     "featureType": "road",
-        //     "elementType": "geometry",
-        //     "stylers": [
-        //       {
-        //         "color": "#ffffff"
-        //       }
-        //     ]
-        //   },
-        //   {
-        //     "featureType": "road.arterial",
-        //     "elementType": "labels.text.fill",
-        //     "stylers": [
-        //       {
-        //         "color": "#757575"
-        //       }
-        //     ]
-        //   },
-        //   {
-        //     "featureType": "road.highway",
-        //     "elementType": "geometry",
-        //     "stylers": [
-        //       {
-        //         "color": "#dadada"
-        //       }
-        //     ]
-        //   },
-        //   {
-        //     "featureType": "road.highway",
-        //     "elementType": "labels.text.fill",
-        //     "stylers": [
-        //       {
-        //         "color": "#616161"
-        //       }
-        //     ]
-        //   },
-        //   {
-        //     "featureType": "road.local",
-        //     "elementType": "labels.text.fill",
-        //     "stylers": [
-        //       {
-        //         "color": "#9e9e9e"
-        //       }
-        //     ]
-        //   },
-        //   {
-        //     "featureType": "transit.line",
-        //     "elementType": "geometry",
-        //     "stylers": [
-        //       {
-        //         "color": "#e5e5e5"
-        //       }
-        //     ]
-        //   },
-        //   {
-        //     "featureType": "transit.station",
-        //     "elementType": "geometry",
-        //     "stylers": [
-        //       {
-        //         "color": "#eeeeee"
-        //       }
-        //     ]
-        //   },
-        //   {
-        //     "featureType": "water",
-        //     "elementType": "geometry",
-        //     "stylers": [
-        //       {
-        //         "color": "#c9c9c9"
-        //       }
-        //     ]
-        //   },
-        //   {
-        //     "featureType": "water",
-        //     "elementType": "labels.text.fill",
-        //     "stylers": [
-        //       {
-        //         "color": "#9e9e9e"
-        //       }
-        //     ]
-        //   }
-        // ],
-      });
-      geocoder = new google.maps.Geocoder();
-      marker = new google.maps.Marker({
-        map: map,
-        draggable: true
-      });
-      marker.addListener('dragend', function () {
-        geocodeLatLng(marker.getPosition());
-      });
-      // Get current location and set it as the initial center
-      getGeoLocation();
-    }
-    function getGeoLocation() {
-      if (navigator.geolocation) {
-        navigator.geolocation.getCurrentPosition(function (position) {
-          const pos = {
-            lat: position.coords.latitude,
-            lng: position.coords.longitude
-          };
-          map.setCenter(pos);
-          marker.setPosition(pos);
-          geocodeLatLng(pos); // Reverse geocode the current position
-        }, function () {
-          console.log('Geolocation service failed. Using default location.');
-        });
-      } else {
-        console.log('Browser does not support Geolocation. Using default location.');
-      }
-    }
-    function geocodeAddress() {
-      const address = document.getElementById('location').value;
-      geocoder.geocode({ 'address': address }, function (results, status) {
-        if (status === 'OK' && results[0]) {
-          map.setCenter(results[0].geometry.location);
-          marker.setPosition(results[0].geometry.location);
-        } else {
-          console.log('Geocode was not successful for the following reason: ' + status);
-        }
-      });
-    }
-    function geocodeLatLng(latlng) {
-      geocoder.geocode({ 'location': latlng }, function (results, status) {
-        if (status === 'OK' && results[0]) {
-          document.getElementById('location').value = results[0].formatted_address;
-        } else {
-          console.log('Geocoder failed due to: ' + status);
-        }
-      });
-    }
-  </script>
-  <script
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBiiiXzfLnQwi1pZgp5pCca64kqwKteowk&language=en&callback=initMap"
-    async defer></script>
-
 </body>
 
 </html>
