--- a/notifications.html
+++ b/notifications.html
@@ -63,7 +63,7 @@
             <a href="login.html" class="dropdown-item"> login </a>
             <a href="profile.html" class="dropdown-item"> profile </a>
             <a href="notifications.html" class="dropdown-item"> notifications </a>
-            <a href="editProfile.html" class="dropdown-item"> edit profile </a>
+            <a href="editProfile.html" class="dropdown-item"> edit Profile </a>
             <a href="#!" class="dropdown-item"> logout </a>
           </div>
         </div>
@@ -102,17 +102,18 @@
                   <h4 class="name"> Mahmoud Elkomy </h4>
                   <span class="phone"> +1 0123456789 </span>
                 </div>
-                <div class="control">
-                  <a href="login.html" data-bs-toggle="tooltip" title=" logout"><img src="img/icons/powerOff.svg"
-                      alt=""></a>
-                </div>
+
               </div>
             </div>
             <div class="profileNavCol">
-              <a href="profile.html"> profile </a>
-              <a class="active" href="notifications.html"> notifications </a>
-              <a href="editProfile.html"> edit Profile </a>
-              <a href="login.html"> logout </a>
+              <a href="profile.html"> <img src="img/icons/profile.svg" alt=""> profile </a>
+              <a class="active" href="notifications.html"> <img src="img/icons/notifications.svg" alt=""> notifications
+              </a>
+              <a href="bought.html"> <img src="img/icons/bought.svg" alt=""> Bought </a>
+              <a href="favorite.html"> <img src="img/icons/favorite.svg" alt=""> Favorite </a>
+              <a href="truYou.html"> <img src="img/icons/truYou.svg" alt=""> TruYou </a>
+              <a href="editProfile.html"> <img src="img/icons/editProfile.svg" alt=""> edit Profile </a>
+              <a href="login.html"> <img src="img/icons/logout.svg" alt=""> logout </a>
             </div>
           </div>
           <!-- content -->
