--- a/editProfile.html
+++ b/editProfile.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <!-- Required meta tags -->
   <meta charset="UTF-8" />
@@ -19,7 +18,6 @@
   <!-- Custom style  -->
   <link rel="stylesheet" href="css/style.css" />
 </head>
-
 <body>
   <!-- ================ Header ================= -->
   <header>
@@ -63,7 +61,7 @@
             <a href="login.html" class="dropdown-item"> login </a>
             <a href="profile.html" class="dropdown-item"> profile </a>
             <a href="notifications.html" class="dropdown-item"> notifications </a>
-            <a href="editProfile.html" class="dropdown-item"> edit profile </a>
+            <a href="editProfile.html" class="dropdown-item"> edit Profile </a>
             <a href="#!" class="dropdown-item"> logout </a>
           </div>
         </div>
@@ -85,8 +83,6 @@
         <!-- <h2> profile </h2> -->
       </div>
     </section>
-
-
     <!-- profile -->
     <section class="profile">
       <div class="container ">
@@ -102,28 +98,24 @@
                   <h4 class="name"> Mahmoud Elkomy </h4>
                   <span class="phone"> +1 0123456789 </span>
                 </div>
-                <div class="control">
-                  <a href="login.html" data-bs-toggle="tooltip" title=" logout"><img src="img/icons/powerOff.svg"
-                      alt=""></a>
-                </div>
               </div>
             </div>
             <div class="profileNavCol">
-              <a href="profile.html"> profile </a>
-              <a href="notifications.html"> notifications </a>
-              <a class="active" href="editProfile.html"> edit Profile </a>
-              <a href="login.html"> logout </a>
+              <a href="profile.html"> <img src="img/icons/profile.svg" alt=""> profile </a>
+              <a href="notifications.html"> <img src="img/icons/notifications.svg" alt=""> notifications </a>
+              <a href="bought.html"> <img src="img/icons/bought.svg" alt=""> Bought </a>
+              <a href="favorite.html"> <img src="img/icons/favorite.svg" alt=""> Favorite </a>
+              <a href="truYou.html"> <img src="img/icons/truYou.svg" alt=""> TruYou </a>
+              <a class="active" href="editProfile.html"> <img src="img/icons/editProfile.svg" alt=""> edit Profile </a>
+              <a href="login.html"> <img src="img/icons/logout.svg" alt=""> logout </a>
             </div>
           </div>
           <!-- content -->
           <div class=" col-md-7 col-lg-8 col-xl-9 p-2 profileContent">
-
-
           </div>
         </div>
       </div>
     </section>
-
   </content>
   <!--(((((((((((((((((((((((()))))))))))))))))))))))-->
   <!--((((((((((((((((( / content )))))))))))))))))))-->
@@ -211,5 +203,4 @@
   <script src="js/main.js"></script>
   <script src="js/custom.js"></script>
 </body>
-
 </html>
