--- a/listing.html
+++ b/listing.html
@@ -63,8 +63,8 @@
             <a href="login.html" class="dropdown-item"> login </a>
             <a href="profile.html" class="dropdown-item"> profile </a>
             <a href="notifications.html" class="dropdown-item"> notifications </a>
-            <a href="editProfile.html" class="dropdown-item"> edit profile </a>
-            <a href="#!" class="dropdown-item"> logout </a>
+            <a href="editProfile.html" class="dropdown-item"> <img src="img/icons/editProfile.svg" alt=""> edit Profile </a>
+            <a href="#!" class="dropdown-item"> <img src="img/icons/logout.svg" alt=""> logout </a>
           </div>
         </div>
         <a href="#!" class="link" data-bs-toggle="tooltip" title=" language "> ع </a>
